--- a/aboutus6.html
+++ b/aboutus6.html
@@ -93,7 +93,7 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">展館介紹</div>
-                        <div class="page_headtext">台北南港展覽館2館即時的最新消息</div>
+                        <div class="page_headtext">台北南港展覽2館擁有國家級雙層展場、全台獨有多功能活動空間(客製化空間需求) 、三鐵共構之交通優勢</div>
                     </div>
                 </div>
 
@@ -133,17 +133,16 @@
                             <div class="down_boxright">下載</div>
                         </a>
                     </div>
-                    <div class="safety_article margin-top">外貿協會台北南港展覽館1館(以下稱該館)致力於環保節能，除取得綠建築標章、執行碳盤查、力行各項綠色措施之外，自2014年5月起與國際潮流接軌，導入ISO 20121活動永續性管理系統(Event Sustainability Management Systems)，將「社會面」、「經濟面」及「環境面」各項永續作法，均列為管理營運的一環!
+                    <div class="safety_article margin-top">外貿協會台北南港展覽館1館(以下稱該館)致力於環保節能，除取得綠建築標章、執行碳盤查、力行各項綠色措施之外，自2014年5月起與國際潮流接軌，導入ISO 20121活動永續性管理系統(Event Sustainability Management Systems)，將「社會面」、「經濟面」及「環境面」各項永續作法，均列為管理營運的一環!
                     </br>
                     社會面：關注弱勢、強化安全。</br>
                     經濟面：提升服務、永續營運。</br>
                     環境面：推動環保、落實清潔。</br>
                     </div>
 
-                    <div class="mod-organizer_title">期許外貿協會台北南港展覽館1館能成為永續展館的典範，讓臺灣會展場地管理邁出紮根「永續」的第一步！
-如須進一步資訊，請詳見：</div>
+                    <div class="mod-organizer_title">需要檔案下載:</div>
                     <div class="download_word">
-                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">外貿協會台北南港展覽館1館活動永續發展聲明、原則及政策</a></div>
+                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#"> 外貿協會台北南港展覽館1館活動永續發展聲明、原則及政策</a></div>
                         <a href="#">
                             <div class="down_boxright">下載</div>
                         </a>
