--- a/aboutus7.html
+++ b/aboutus7.html
@@ -93,7 +93,7 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">展館介紹</div>
-                        <div class="page_headtext">台北南港展覽館2館即時的最新消息</div>
+                        <div class="page_headtext">台北南港展覽2館擁有國家級雙層展場、全台獨有多功能活動空間(客製化空間需求) 、三鐵共構之交通優勢</div>
                     </div>
                 </div>
 
@@ -125,28 +125,34 @@
                 </div>
 
                 <div class="news_continer">
-                <div class="mod-organizer_title">大家的貿協、服務的貿協</div>
+                <div class="mod-organizer_title">關於中華民國對外貿易發展協會</div>
                 <div class="safety_article">
                     中華民國對外貿易發展協會（簡稱外貿協會或貿協）係由中華民國政府於民國59年7月1日結合民間 工商團體，所組成之非營利性財團法人，成立宗旨係協助業界發展我國之對外貿易。
+
 </br></br>
-成立40餘年來，在政府及工商界的支持下，外貿協會除了在台北設有服務總部外，在新竹、台中、台南及高雄設有四個國內辦事處，在國外設有60個海外辦事處，並相繼設立台灣貿易中心、台北世界貿易中心等姐妹機構，透過六百多位訓練有素的貿易專才，貿協已為業者建構一個完整的全球貿易服務網，成為業者拓展對外貿易的最佳幫手與夥伴。
+中華民國對外貿易發展協會(簡稱外貿協會或貿協)為臺灣最重要的貿易推廣機構，係由經濟部結合民間工商團體成立之公益性財團法人，以協助業者拓展對外貿易為設立宗旨。目前，本會擁有1,300多位海內外專業經貿人員，除台北總部外，設有桃園、新竹、台中、台南及高雄等5個國內辦事處和遍佈全球各地61個海外據點，形成完整的貿易服務網，提供零時差、無國界的即時服務，持續與廠商共同追求台灣經濟的穩健發展，是業者拓展貿易的最佳夥伴。
+</br></br>
+為強化跨領域整合創新，本會重新定位為國際鏈結智慧整合中心(smart integrator)，結合法人、大學、觀光、展會、城市、公協會、海外台商，為業者開發國際市場、進行國際合作、連接國際網絡，提供整合性服務。
+
                 </div>
                     <div class="line_gray"></div>
 
                     <div class="public-art">
                         <div class="art"><img src="images/56c95b7809839.jpg"></div>
                         <div class="art">
-                            <div class="mod-organizer_title">貿協主要的功能及服務項目包括：</div>
+                            <div class="mod-organizer_title">10大核心服務：</div>
                             <div class="transport_point">
                                 <ul>
-                                    <li>開拓國際經貿市場</li>
-                                    <li>行銷台灣、布局全球</li>
-                                    <li>推廣品牌與形象</li>
-                                    <li>強化多元展覽服務</li>
-                                    <li>蒐集全球商情資訊</li>
-                                    <li>提供專業會議服務</li>
-                                    <li>培訓優秀國際企業人才</li>
-                                    <li>提供網路貿易服務</li>
+                                    <li>拓銷全球市場 </li>
+                                    <li>推廣服務業貿易</li>
+                                    <li>培訓國際企業人才</li>
+                                    <li>推動國際經貿聯繫</li>
+                                    <li>提升臺灣產業形象</li>
+                                    <li>提供市場研析及商情</li>
+                                    <li>加強數位及電商行銷</li>
+                                    <li>運用大數據發掘商機</li>
+                                    <li>辦理台灣國際專業展</li>
+                                    <li>營運展覽館及會議中心</li>
                                 </ul>
                             </div>
                         </div>
