--- a/advertisements_electronic_board.html
+++ b/advertisements_electronic_board.html
@@ -93,7 +93,8 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">廣告刊登</div>
-                        <div class="page_headtext">台北南港展覽館1館為全台首座專業化大型雙層展覽館 打造一個安全、舒適、便利、人本與環保的環境。
+                        <div class="page_headtext">本館鄰近南港展覽館捷運站，上下班及展覽期間當日人流可觀，讓廣告的宣傳效果能盡於卓越
+
                         </div>
                     </div>
                 </div>
@@ -116,7 +117,7 @@
                     <ul>
                         <a href="advertisements_ad.html"><li>廣告點位</li></a>
                         <a href="advertisements_led.html"><li>200吋LED</li></a>
-                        <a href="advertisements_electronic_board.html"><li class="active">電子看板</li></a>
+                        <!-- <a href="advertisements_electronic_board.html"><li class="active">電子看板</li></a> -->
                     </ul>
                 </div>
 
