--- a/advertisements_led.html
+++ b/advertisements_led.html
@@ -116,7 +116,7 @@
                     <ul>
                         <a href="advertisements_ad.html"><li>廣告點位</li></a>
                         <a href="advertisements_led.html"><li class="active">200吋LED</li></a>
-                        <a href="advertisements_electronic_board.html"><li>電子看板</li></a>
+                        <!-- <a href="advertisements_electronic_board.html"><li>電子看板</li></a> -->
                     </ul>
                 </div>
 
