--- a/conference-room_item7.html
+++ b/conference-room_item7.html
@@ -93,7 +93,7 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">會議室</div>
-                        <div class="page_headtext">台北南港展覽館2館即時的最新消息</div>
+                        <div class="page_headtext">本館最大的特點是位於7樓的多功能會議中心，無柱設計並挑高9公尺的室內空間、全台唯一能透過隔間組合出10種尺寸，使場地能達到最大效能的規劃</div>
                     </div>
                 </div>
 
@@ -102,11 +102,13 @@
                 <div class="breadcrumb_title">其他服務</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
-                        <li>租借場地</li>
+                        <li><a href="organizers.html">租借場地</a></li>
                         <li>/</li>
-                        <li class="activeddd">會議室</li>
+                        <li><a href="#">會議室</a></li>
+                        <li>/</li>
+                        <li class="activeddd">其他服務</li>
                     </ul>
                 </div>
             </div>
