--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                         </div>
                                     </a>
                                     <a href="transportation5.html">
-                                        <div class="transportation5.html">
+                                        <div class="ubike_btn">
                                             <ul>
                                                 <li><img src="images/bus4.svg"></li>
                                                 <li>高鐵</li>
