--- a/organizers.html
+++ b/organizers.html
@@ -93,8 +93,7 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">租借場地</div>
-                        <div class="page_headtext">台北南港展覽館1館為全台首座專業化大型雙層展覽館
-                        打造一個安全、舒適、便利、人本與環保的環境。</div>
+                        <div class="page_headtext">台北南港展覽2館擁有專業化的大型場地空間，提供展覽空間、會議舉辦、各式活動的需求</div>
                     </div>
                 </div>
 
@@ -113,7 +112,7 @@
                 <div class="bok-pic"><img src="images/biew.jpg"></div>
                 <div class="bok-pic bok_rp">
                     <div class="bok_title">展覽會場</div>
-                    <div class="bok_font">南港2館一樓挑高12公尺展場，是目前全台灣挑高最高的有柱結構展覽館</div>
+                    <div class="bok_font">國家級規格雙層展覽空間提供專業級的服務</div>
                     <a href="organizers_item1.html">
                     <div class="bok_btn">立即前往</div>
                     </a>
@@ -123,7 +122,7 @@
             <div class="pace_bok2">
                 <div class="bok-pic bok_rp flix01">
                     <div class="bok_title">會議室</div>
-                    <div class="bok_font">台北南港展覽館1館共有14間會議室，可同時容納2,538人，另設有專業化視聽及會議系統，讓各類型議事均能順利進行。</div>
+                    <div class="bok_font">全台唯一多功能可調整式大型會議空間</div>
                     <a href="conference-room.html">
                     <div class="bok_btn">立即前往</div>
                     </a>
@@ -135,7 +134,7 @@
                 <div class="bok-pic"><img src="images/biew2.jpg"></div>
                 <div class="bok-pic bok_rp">
                     <div class="bok_title">公共空間</div>
-                    <div class="bok_font">借用收費基準及實施規範及公共空間申請表</div>
+                    <div class="bok_font">空中走廊及星光長廊完美造景呈現</div>
                     <a href="public_space.html">
                     <div class="bok_btn">立即前往</div>
                     </a>
@@ -145,7 +144,7 @@
             <div class="pace_bok2">
                 <div class="bok-pic bok_rp flix01">
                     <div class="bok_title">廣告刊登</div>
-                    <div class="bok_font">台北南港展覽館1館臨時廣告物申請流程及詳細實施規範及收費基準說明</div>
+                    <div class="bok_font">有效宣傳活動的行銷手法及廣告曝光</div>
                     <a href="advertisements_ad.html">
                     <div class="bok_btn">立即前往</div>
                     </a>
