--- a/organizers_item5.html
+++ b/organizers_item5.html
@@ -121,7 +121,7 @@
                         <a href="organizers_booking_calendar.html"><li>空檔查詢</li></a>
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
                         <a href="#"><li>活動申請</li></a>
-                        <a href="#"><li>尾牙方案</li></a>
+                        <!-- <a href="#"><li>尾牙方案</li></a> -->
                         <a href="#"><li>南港一館</li></a>
                         <a href="organizers_item5.html"><li class="active">交通及停車場</li></a>
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
