--- a/organizers_item6.html
+++ b/organizers_item6.html
@@ -121,7 +121,7 @@
                         <a href="organizers_booking_calendar.html"><li>空檔查詢</li></a>
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
                         <a href="#"><li>活動申請</li></a>
-                        <a href="#"><li>尾牙方案</li></a>
+                        <!-- <a href="#"><li>尾牙方案</li></a> -->
                         <a href="#"><li>南港一館</li></a>
                         <a href="organizers_item5.html"><li>交通及停車場</li></a>
                         <a href="organizers_item6.html"><li class="active">展覽申請</li></a>
@@ -130,14 +130,14 @@
                 <div class="telecom">
                     <div class="com"><img src="images/telecom.jpg"></div>
                     <div class="com">
-                        <div class="com_title">中華電信股份有限公司台北東區服務中心臨時電話班</div>
-                        <div class="com_font">服務電話： 886-2-27200149</br>
-                        南港展覽館1館展場服務及障礙維修電話： 886-2-2655-9456 (展覽期間)</div>
+                        <div class="com_title">中華電信股份有限公司(南港服務中心)</div>
+                        <div class="com_font">服務電話： 886-2-2720-0149</br>
+                        駐地施工班： 886-2-2655-9456 (展覽期間)</div>
                     </div>
                     <div class="com"><img src="images/telecom2.jpg"></div>
                     <div class="com">
                         <div class="com_title">新竹物流</div>
-                        <div class="com_font">服務時間：展覽期間</br>
+                        <div class="com_font">服務時間：展覽期間</br>
                         服務項目：貨運配送、宅配到府、物流倉儲</div>
                     </div>
                 </div>
