--- a/public_space.html
+++ b/public_space.html
@@ -93,7 +93,7 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">公共空間租借</div>
-                        <div class="page_headtext">台北南港展覽館2館即時的最新消息</div>
+                        <div class="page_headtext">本館7樓規劃視野景觀兼具的空中花園，可供參館者在喧囂的城市中享受片刻的放鬆</div>
                     </div>
                 </div>
 
@@ -119,10 +119,11 @@
                     </ul>
                 </div>
                 <div class="news_continer">
-                    <div class="mod-organizer_title margintop_title">洽詢貿協會台北南港展覽館 1 館公共空間借用流程：</div>
+                    <div class="widget-pic"><img src="images/bgLeft.jpg"></div>
+                    <div class="mod-organizer_title margintop_title">洽詢貿協會台北南港展覽館 2館公共空間借用流程：</div>
                     <div class="mod-organizer_title ">1.「借用收費基準及實施規範」請詳閱：</div>
                     <div class="download_word">
-                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">【單獨租用】公共空間收費基準及實施規範 </a></div>
+                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">【單獨租用】公共空間收費基準及實施規範</a></div>
                         <a href="#"><div class="down_boxright">下載</div></a>
                     </div>
                     <div class="mod-organizer_title margintop_title">「公共空間申請表」請依需求下載後回傳：</div>
@@ -130,7 +131,7 @@
                         <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">【其他】公共空間申請表</a></div>
                         <a href="#"><div class="down_boxright">下載</div></a>
                     </div>
-                    <div class="safety_article">與專員連絡：電話: 886-2-2725-5200  分機:  5525</div>
+                    <div class="safety_article">與專員連絡：電話: 886-2-2725-5200  分機:  5526</div>
                 </div>
 
 
