--- a/public_space2.html
+++ b/public_space2.html
@@ -93,7 +93,7 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">公共空間租借</div>
-                        <div class="page_headtext">台北南港展覽館2館即時的最新消息</div>
+                        <div class="page_headtext">本館7樓規劃視野景觀兼具的空中花園，可供參館者在喧囂的城市中享受片刻的放鬆</div>
                     </div>
                 </div>
 
@@ -213,6 +213,8 @@
                     <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">【單獨租用】公共空間收費基準及實施規範</a></div>
                     <a href="#"><div class="down_boxright">下載</div></a>
                 </div>
+
+                <div class="safety_article">內容負責填寫單位:業務組</div>
 
             </div>
 
