--- a/public_space3.html
+++ b/public_space3.html
@@ -93,7 +93,7 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">公共空間租借</div>
-                        <div class="page_headtext">台北南港展覽館2館即時的最新消息</div>
+                        <div class="page_headtext">本館7樓規劃視野景觀兼具的空中花園，可供參館者在喧囂的城市中享受片刻的放鬆</div>
                     </div>
                 </div>
 
