--- a/transportation1.html
+++ b/transportation1.html
@@ -132,35 +132,34 @@
                     <div class="tran_list">
                         <div class="transport_point">
                             <ul>
-                                <li>停車空間： 地下停車場 620個汽車停車位，1770個機車停車位。
+                                <li>停車空間： 地下停車場 1,296個汽車停車位、大型巴士可容32輛、機車格1,136格。
                                 </li>
                                 <li>開放時間： 每日上午 7時至晚間 10時 （晚間 9時 30分關閉車輛入口），配合活動機動延長開放時間。</li>
-                                <li>台北南港展覽館1館停車場車位有限，請多搭乘公共運輸及大眾捷運系統</li>
+                                <li>台北南港展覽館2館停車場車位有限，請多搭乘公共運輸及大眾捷運系統</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="line_gray"></div>
 
-                <div class="mod-organizer_title">台北南港展覽館1館 地下停車場停車辦法：</div>
+                <div class="mod-organizer_title">台北南港展覽館2館 地下停車場停車辦法：</div>
                 <div class="trans_box">
                     <div class="tran_list"><img src="images/p_car.svg"></div>
                     <div class="tran_list">
                         <div class="transport_point">
                             <ul>
-                                <li>本停車場自106年1月1日起委由中興電工機械股份有限公司（嘟嘟房）經營管理。</li>
+                                <li>本停車場自106年1月1日起委由中興電工機械股份有限公司(嘟嘟房)經營管理。</li>
                                 <li>車輛入場車牌辨識，離開時至自動繳費機繳費後出場。</li>
-                                <li>平常日（含活動期間）計時收費，30元/小時，當日收費最高150元；展覽期間計時收費，60元/小時，當日收費最高250元。
-機車計次30元。</li>
-                                <li>本停車場開放時間： 每日上午7時至晚間10時（如遇演唱會活動將配合開放至活動結束）</li>
-                                <li>本停車場各項收費標準如下（含展覽及活動期間）</li>
+                                <li>平常日(含活動期間)計時收費，30元/小時，當日收費最高150元；展覽期間計時收費，60元/小時，當日收費最高250元。機車計次30元。</li>
+                                <li>本停車場開放時間： 每日上午7時至晚間10時(如遇演唱會活動將配合開放至活動結束)</li>
+                                <li>本停車場各項收費標準如下(含展覽及活動期間)</li>
                                 <li>身心障礙者憑身心障礙手冊，汽、機車停車費以8折計收。</li>
                                 <li>以上費率如遇調整，以現場實際公告之費率為準。</li>
-                                <li>非展覽期間（含平日及各項活動）：</li>
+                                <li>非展覽期間(含平日及各項活動)：</li>
                             </ul>
                             <div class="point_sem">15分鐘內離場者免收費，停放15分鐘至1小時內者停車費新臺幣30元。超過1小時以上，每增加半小時加收15 元，不滿半小時以半小時計，每日收費最高150元，停放之車輛，如逾晚間10時仍未駛離，須另繳付過夜停車費300元。</div>
                             <ul>
-                                <li>展覽期間</li>
+                                <li>展覽期間：</li>
                             </ul>
                                 <div class="point_sem">每小時60元，第1小時未滿1小時者以1小時計，爾後每增加半小時加收25元，不滿半小時以半小時計，超過半小時而未滿1小時以1小時計，每日收費最高250元，停放之車輛，如逾晚間10時仍未駛離，須另繳付過夜停車費300元。</div>
 
