--- a/transportation2.html
+++ b/transportation2.html
@@ -93,7 +93,8 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">交通資訊</div>
-                        <div class="page_headtext">台北南港展覽館1館為全台首座專業化大型雙層展覽館 打造一個安全、舒適、便利、人本與環保的環境。
+                        <div class="page_headtext">本館鄰近南港展覽館捷運站(步行1分鐘) ，開車民眾行駛國道一號、國道三號皆方便，腹地廣大停車方便
+
                         </div>
                     </div>
                 </div>
@@ -126,31 +127,35 @@
             </div>
             <div class="widget-pic"><img src="images/lobe.jpg"></div>
             <div class="orang_wrapper">
-                <div class="mod-organizer_title">1.利用中山高（北一高）北上及南下之行車路線：</div>
+                <div class="mod-organizer_title">1.利用 中山高(北一高)北上及南下之行車路線：</div>
                 <div class="trans_box">
                     <div class="tran_list"><img src="images/national1.svg"></div>
                     <div class="tran_list">
                         <div class="transport_point">
                             <ul>
                                 <li>利用國道一號北上或南下的車輛(含大型車輛)，請於16.8公里處「內湖交流道」下高速公路，接「成功路」，直行過「成功橋」， 左轉接「重陽路」至南港展館(可利用原路線接國道一號南下或北上)。
+
                                 </li>
-                                <li>或於11.5公里處「汐止系統交流道」離開國道一號，再接國道三號繼續往南行駛，至12.7公里處「新台五路交流道」下高速公路，右轉接 「新台五路」，再左轉「大同路」，直行接南港路至南港展館(所有車輛可利用原路接國道一號南下或北上)。</li>
-                                <li>利用國道一號北上至南港展館的所有車輛亦可前行至15.2公里處「東湖交流道」下高速公路，右轉接「康寧路」，過「南湖大橋」後，接「三重路」、左轉「經貿二路」至南港展館(自南港展館出發，可利用原路接國道一號南下，惟無法北上)。</li>
+                                <li>或於11.5公里處「汐止系統交流道」離開國道一號，再接國道三號繼續往南行駛，至12.7公里處「新台五路交流道」下高速公路，右轉接 「新台五路」，再左轉「大同路」，直行接南港路至南港展館(所有車輛可利用原路接國道一號南下或北上)。
+</li>
+                                <li>利用國道一號北上至南港展館的所有車輛亦可前行至15.2公里處「東湖交流道」下高速公路，右轉接「康寧路」，過「南湖大橋」後，接「三重路」、左轉「經貿二路」至南港展館(自南港展館出發，可利用原路接國道一號南下，惟無法北上)。</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="line_gray"></div>
 
-                <div class="mod-organizer_title">2.利用國​道三號北二高北上及南下之行車路線（含國道五號北宜高速公路）：</div>
+                <div class="mod-organizer_title">2.利用國​道三號北二高北上及南下之行車路線(含國道五號北宜高速公路)：</div>
                 <div class="trans_box">
                     <div class="tran_list"><img src="images/national3.svg"></div>
                     <div class="tran_list">
                         <div class="transport_point">
                             <ul>
-                                <li>利用國道三號北上或南下的車輛(含大型車輛)，請於12.7公里處「新台五路交流道」下高速公路，接「新台五路」、左轉「大同 路」、直行接「南港路」至南港展館(所有車輛可利用原路接國道三號南下或北上)。</li>
-                                <li>除貨櫃車及聯結車外，其他車輛可於15.1公里處「南港交流道」下高速公路，接「南港聯絡道」後靠內側車道行駛，直行約1.5 公里至「南港經貿園區」出口下聯絡道，左轉接經貿一路至南港展館(貨櫃車及聯結車除外，其他車輛可利用原路接國道三號南下，惟無法北上)。</li>
-                                <li>利用國道五號往台北的小型車輛，行至「南港系統交流道」匯接國道三號，靠右側車道行駛約1公里，於15.1公里處「南港交流道」接「南港聯絡道」至南港展館(小型車輛可利用原路上國道五號 )。</li>
+                                <li>利用國道三號北上或南下的車輛(含大型車輛)，請於12.7公里處「新台五路交流道」下高速公路，接「新台五路」、左轉「大同 路」、直行接「南港路」至南港展館(所有車輛可利用原路接國道三號南下或北上)。
+</li>
+                                <li>除貨櫃車及聯結車外，其他車輛可於15.1公里處「南港交流道」下高速公路，接「南港聯絡道」後靠內側車道行駛，直行約1.5 公里至「南港經貿園區」出口下聯絡道，左轉接經貿一路至南港展館(貨櫃車及聯結車除外，其他車輛可利用原路接國道三號南下，惟無法北上)。
+</li>
+                                <li>利用國道五號往台北的小型車輛，行至「南港系統交流道」匯接國道三號，靠右側車道行駛約1公里，於15.1公里處「南港交流道」接「南 港聯絡道」至南港展館(小型車輛可利用原路上國道五號 )。</li>
                             </ul>
                         </div>
                     </div>
@@ -164,14 +169,16 @@
                     <div class="tran_list">
                         <div class="transport_point">
                             <ul>
-                                <li>台北南港展覽館1館東側來車:利用大同路、接南港路，至經貿二路口右轉南港展館。</li>
-                                <li>台北南港展覽館1館西側來車:</li>
+                                <li>台北南港展覽館2館東側來車:</li>
                             </ul>
                             <div class="point_sem">- 利用忠孝東路，行至研究院路口左轉，穿越縱貫鐵路後，直行接經貿二路至南港展館;</div>
                             <div class="point_sem">- 利用環東大道，至「南港經貿園區、汐止」出口下環東大道，接經貿一路至南港展館。</div>
 
                             <ul>
-                                <li>台北南港展覽館1館南側來車:利用研究院路(或忠孝東路左轉研究院路)直行，穿越縱貫鐵路後直行接經貿二路至南港展館。</li>
+                                <li>台北南港展覽館2館南側來車:</li>
+                            </ul>
+                            <div class="point_sem">- 利用研究院路(或忠孝東路左轉研究院路)直行，穿越縱貫鐵路後直行接經貿二路至南港展館。</div>
+                            <ul>
                                 <li>台北南港展覽館1館北側來車:</li>
                             </ul>
                             <div class="point_sem">- 利用康寧路，過「南湖大橋」後接「三重路」、左轉「經貿二路」至南港展館。</div>
