--- a/transportation4.html
+++ b/transportation4.html
@@ -125,7 +125,11 @@
             </div>
             <div class="widget-pic"><img src="images/lobe.jpg"></div>
             <div class="orang_wrapper">
-                <div class="mod-organizer_title">台北南港展覽館1館週邊站牌：</div>
+                <div class="safety_article">
+                    使用GoogleMap查詢公車路線 </br>
+                    使用 「我愛巴士 台北市公車資訊」查詢： http://www.5284.com.tw/ 
+                </div>
+                <div class="mod-organizer_title">台北南港展覽館2館週邊站牌：</div>
                 <div class="trans_box">
                     <div class="tran_list"><img src="images/busicon.svg"></div>
                     <div class="tran_list">
@@ -133,7 +137,7 @@
                             <ul>
                                 <li>南港國小：</li>
                             </ul>
-                            <div class="point_sem">212、276、306（三重）、306（大都會）、306、605、620、629、645、645、668、675、小1、小12、小12、小5、藍15、 藍22、藍23、205
+                            <div class="point_sem">212、276、306(三重)、306(大都會)、306、605、620、629、645、645、668、675、小1、小12、小12、小5、藍15、藍22、藍23、205
                             </div>
                             <ul>
                                 <li>經貿一路口：</li>
@@ -142,7 +146,7 @@
                             <ul>
                                 <li>南港軟體園區北站：</li>
                             </ul>
-                            <div class="point_sem">203、281、620、620、629、645、551、711、817、小1、紅32、藍12、藍22、棕9、棕10 </div>
+                            <div class="point_sem">203、281、620、620、629、645、551、711、817、小1、紅32、藍12、藍22、棕9、棕10 </div>
 
                             <ul>
                                 <li>南港軟體園區南站：</li>
@@ -153,7 +157,7 @@
                 </div>
                 <div class="line_gray"></div>
 
-                <div class="mod-organizer_title">台北南港展覽館1館週邊站牌位置：</div>
+                <div class="mod-organizer_title">台北南港展覽館2館週邊站牌位置：</div>
                 <div class="trans_box">
                     <div class="tran_list"><img src="images/busicon.svg"></div>
                     <div class="tran_list">
@@ -161,21 +165,21 @@
                             <ul>
                                 <li>南港國小：</li>
                             </ul>
-                            <div class="point_sem">212、276、306（三重）、306（大都會）、306、605、620、629、645、645、668、675、小1、小12、小12、小5、藍15、 藍22、藍23、205
+                            <div class="point_sem">北市南港路 1 段 77 號（向西）；北市南港路 TS12C83 電桿旁（向東）
                             </div>
                             <ul>
                                 <li>經貿一路口：</li>
                             </ul>
-                            <div class="point_sem">605、629、668、675、南21、51</div>
+                            <div class="point_sem">北市南港路 1 段上距經貿路口 10M 西側（向西）</div>
                             <ul>
                                 <li>南港軟體園區北站：</li>
                             </ul>
-                            <div class="point_sem">203、281、620、620、629、645、551、711、817、小1、紅32、藍12、藍22、棕9、棕10 </div>
+                            <div class="point_sem">北市三重路 39 號候車亭旁（向南）；北市三重路 39 號對面(向北)</div>
 
                             <ul>
                                 <li>南港軟體園區南站：</li>
                             </ul>
-                            <div class="point_sem">51、203、281、620、620、629、645、551、711、817、小1、紅32、藍12、藍21、藍22</div>
+                            <div class="point_sem">北市三重路 19 之 2 號前（向南）；北市三重路 19-2 號對面(向北)</div>
                         </div>
                     </div>
                 </div>
