--- a/visitors2.html
+++ b/visitors2.html
@@ -93,7 +93,8 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">參觀資訊</div>
-                        <div class="page_headtext">台北南港展覽館1館為全台首座專業化大型雙層展覽館 打造一個安全、舒適、便利、人本與環保的環境。
+                        <div class="page_headtext">台北南港展覽2館在展館的設計上也融合了美學及功能，為求提供一個安全、舒適的空間給您
+
                         </div>
                     </div>
                 </div>
@@ -115,12 +116,12 @@
                         <a href="transportation1.html"><li>交通資訊</li></a>
                         <a href="visitors2.html"><li class="active">平面位置</li></a>
                         <a href="visitors3.html"><li>公共設施</li></a>
-                        <a href="visitors4.html"><li>Free Wi-Fi</li></a>
+                        <!-- <a href="visitors4.html"><li>Free Wi-Fi</li></a> -->
                         <a href="food.html"><li>餐飲服務</li></a>
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
                         <a href="visitors6.html"><li>住宿資訊</li></a>
                         <a href="visitors7.html"><li>外幣兌換與快遞服務</li></a>
-                        <a href="visitors8.html"><li>免費行動數位閱讀</li></a>
+                        <!-- <a href="visitors8.html"><li>免費行動數位閱讀</li></a> -->
                     </ul>
                 </div>
                 <div class="mod-organizer_title">平面位置</div>
@@ -131,6 +132,8 @@
                     </br>
                     同時可見台北南港展覽館1館之經貿廣場、中央廣場、西南廣場、東南側廣場及東北側廣場位置，供參觀訪客、民眾參考。
                 </div>
+                <div class="mod-organizer_title">圖為台北南港展覽館2館一樓平面圖，顯示下列區域和展館的相對位置：</div>
+
 
                 <div class="widget-pic"><img src="images/sdffg.jpg"></div>
 
