--- a/visitors4.html
+++ b/visitors4.html
@@ -93,7 +93,8 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">參觀資訊</div>
-                        <div class="page_headtext">台北南港展覽館1館為全台首座專業化大型雙層展覽館 打造一個安全、舒適、便利、人本與環保的環境。
+                        <div class="page_headtext">台北南港展覽2館在展館的設計上也融合了美學及功能，為求提供一個安全、舒適的空間給您
+
                         </div>
                     </div>
                 </div>
@@ -115,12 +116,12 @@
                         <a href="transportation1.html"><li>交通資訊</li></a>
                         <a href="visitors2.html"><li>平面位置</li></a>
                         <a href="visitors3.html"><li>公共設施</li></a>
-                        <a href="visitors4.html"><li class="active">Free Wi-Fi</li></a>
+                        <!-- <a href="visitors4.html"><li class="active">Free Wi-Fi</li></a> -->
                         <a href="food.html"><li>餐飲服務</li></a>
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
                         <a href="visitors6.html"><li>住宿資訊</li></a>
                         <a href="visitors7.html"><li>外幣兌換與快遞服務</li></a>
-                        <a href="visitors8.html"><li>免費行動數位閱讀</li></a>
+                        <!-- <a href="visitors8.html"><li>免費行動數位閱讀</li></a> -->
                     </ul>
                 </div>
                 <div class="mod-organizer_title">台北南港展覽館1館免費Wi-Fi上網服務使用說明</div>
