--- a/aboutus3.html
+++ b/aboutus3.html
@@ -93,7 +93,7 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">展館介紹</div>
-                        <div class="page_headtext">台北南港展覽館2館即時的最新消息</div>
+                        <div class="page_headtext">台北南港展覽2館擁有國家級雙層展場、全台獨有多功能活動空間(客製化空間需求) 、三鐵共構之交通優勢</div>
                     </div>
                 </div>
 
@@ -128,11 +128,14 @@
                     <div class="widget-pic"><img src="images/aboutvideo.jpg"></div>
                     <div class="safety_article">
 
-                        96年7月底完工、97年3月13日正式營運的台北南港展覽1館，為一擁有上、下層展廳、計可規劃2,467個標準攤位的大型專業展覽館，不但展示面積為台北世貿展覽大樓的兩倍大，其所擁有的14間會議室(可彈性隔間為18間)、2間餐廳及9間面對馬路的商店，均將提供使用者更為人性化及便利性的服務與設施。
-</br></br>
-台北南港展覽館1館的上層雲端展場屋頂跨距達126 x 180公尺，淨高14.3~27.3公尺，全區無柱位，適合在展覽空檔期間舉辦大型演唱會、直銷會議、獎勵旅遊、宗教集會及公司餐會(含尾牙、春酒)等。為打造國際級、一流的會展空間，貿協已針對南港展覽館的特性，增設多項營運設備，包括多國語言的展場指標及線上導覽系統、全館無線上網等。
-</br></br>
-台北南港展覽館1館的啟用，已帶動南港經貿園區的整體開發，並對我國經濟產值帶來顯著的貢獻。貿協也將更努力提升我國會展產業的產值，除積極規劃辦理新展外， 60個海外辦事處也將進行全球行銷，積極爭取國外展覽公司來台辦展，讓台灣會展產業在國際間持續發光發熱。
+                    台北南港展覽2館於107年8月完工、108年3月4日正式營運，擁有雙層展廳(1F 、 4F) ，全館可規劃之標準攤位數達2146格，展示面積為台北世貿展覽大樓的1.5倍，全台獨有的多功能活動空間可容3,200人，室內空間 3,880㎡ ， 可依客製化隔出9種尺寸的隔間，餐飲空間設有3樓餐廳可容500人及B1商店街， 停車場設有汽車格1,296位、大型巴士可容32輛、機車格1,136格，提供來賓更便利及舒適的服務與設施。
+</br>
+</br>
+台北南港展覽館2館一樓展覽空間挑高12公尺，二樓展覽空間挑高9公尺，適合舉辦大型演唱會、直銷會議、獎勵旅遊、宗教集會及公司餐會(含尾牙、春酒)等。打造國際級規格展覽館，貿協已針對使用者需求增設多項營運設備。
+</br>
+</br>
+台北南港展覽館2館的落成為會展產業注入新能量，藉此帶動南港經貿園區的區域發展，並對我國經濟產值帶來顯著的貢獻。貿協持續注入新血以提升我國會展產業的價值，近年來積極規劃及爭取辦理國內外新展外，放眼全球並參與國外會展產業的展覽，主動邀約國外展覽公司來台辦展，讓台灣會展產業在國際間能成為辦展第一首選場地。
+
                     </div>
                 </div>
 
