--- a/aboutus4.html
+++ b/aboutus4.html
@@ -93,7 +93,7 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">展館介紹</div>
-                        <div class="page_headtext">台北南港展覽館2館即時的最新消息</div>
+                        <div class="page_headtext">台北南港展覽2館擁有國家級雙層展場、全台獨有多功能活動空間(客製化空間需求) 、三鐵共構之交通優勢</div>
                     </div>
                 </div>
 
