--- a/food.html
+++ b/food.html
@@ -131,6 +131,8 @@
                                         <li>周一至周五：08:00-17:00</li>
                                         <li>展覽期間：08:00-20:00</li>
                                         <li>週六及週日：10:00-19:00</li>
+                                        <li>886-2-2725-5200#5157 ; 886-2-7746-2978</li>
+                                        <li>速食、炸雞及飲料</li>
                                     </ul>
                                 </div>
                             </div>
@@ -146,6 +148,8 @@
                                         <li>周一至周五：08:00-17:00</li>
                                         <li>展覽期間：08:00-20:00</li>
                                         <li>週六及週日：10:00-19:00</li>
+                                        <li>886-2-2725-5200#5157 ; 886-2-7746-2978</li>
+                                        <li>速食、炸雞及飲料</li>
                                     </ul>
                                 </div>
                             </div>
@@ -161,6 +165,8 @@
                                         <li>周一至周五：08:00-17:00</li>
                                         <li>展覽期間：08:00-20:00</li>
                                         <li>週六及週日：10:00-19:00</li>
+                                        <li>886-2-2725-5200#5157 ; 886-2-7746-2978</li>
+                                        <li>速食、炸雞及飲料</li>
                                     </ul>
                                 </div>
                             </div>
@@ -176,6 +182,8 @@
                                         <li>周一至周五：08:00-17:00</li>
                                         <li>展覽期間：08:00-20:00</li>
                                         <li>週六及週日：10:00-19:00</li>
+                                        <li>886-2-2725-5200#5157 ; 886-2-7746-2978</li>
+                                        <li>速食、炸雞及飲料</li>
                                     </ul>
                                 </div>
                             </div>
@@ -191,6 +199,8 @@
                                         <li>周一至周五：08:00-17:00</li>
                                         <li>展覽期間：08:00-20:00</li>
                                         <li>週六及週日：10:00-19:00</li>
+                                        <li>886-2-2725-5200#5157 ; 886-2-7746-2978</li>
+                                        <li>速食、炸雞及飲料</li>
                                     </ul>
                                 </div>
                             </div>
@@ -206,6 +216,8 @@
                                         <li>周一至周五：08:00-17:00</li>
                                         <li>展覽期間：08:00-20:00</li>
                                         <li>週六及週日：10:00-19:00</li>
+                                        <li>886-2-2725-5200#5157 ; 886-2-7746-2978</li>
+                                        <li>速食、炸雞及飲料</li>
                                     </ul>
                                 </div>
                             </div>
